prevent exec result window from getting too big

--- a/src/main/resources/static/css/game.css
+++ b/src/main/resources/static/css/game.css
@@ -70,6 +70,9 @@
     padding: 1.5rem;
     margin-block: 1.5rem;
     color: #fff;
+
+    max-height: 30vh;
+    overflow: auto;
 }
 #execution-result:empty {
     display: none;
